<resources>
    <string name="app_name">NostrPostr</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="title_search">Search</string>
    <string name="title_post">Post</string>
    <string name="has_private_key">has private key</string>
    <string name="title_dashboard">Chat</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_block_user">Block User</string>

    <string name="private_key">Private Key</string>
    <string name="access">Access</string>
    <string name="access_warning">Store your key in a safe place . If lose it , you won\'t be able to access or recover your profile .</string>
    <string name="not_key">Don\'t hav keys?</string>
    <string name="copy_key">Copy private key</string>
    <string name="create_key">Create keys</string>

    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>